FIXED EXTRA SPACE ON LEFT BUG

--- a/Capstone.Web/Content/StyleSheet1.css
+++ b/Capstone.Web/Content/StyleSheet1.css
@@ -7,7 +7,6 @@
     background-image: url('Images/5284805606_34a2f9f5a3_o.jpg');
     opacity:0.8;*/
     background-color:#233237;
-    /*height:500px;*/
 }
 
 .boxesPadding{
@@ -16,9 +15,9 @@
 
 
 
-html, body, {
-    max-width: 100%;
-    overflow-x: hidden;
+html, body {
+    max-width: 100% !important; 
+    overflow-x: hidden !important;
 }
 
 ul {
